tp3/config/services.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  labels:
    app: wordpress-svc
  namespace: wordpress-demo
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql-svc
  namespace: wordpress-demo
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  type: ClusterIP
