tp3/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-wordpress-ingress
  namespace: wordpress-demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - wordpress.lab-cesi.fr
      secretName: wordpress-tls
  ingressClassName: nginx
  rules:
  - host: wordpress.lab-cesi.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-svc
            port:
              number: 80
